--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "npm-run-all --parallel vite:dev typesafe-i18n",
-		"build": "typesafe-i18n --no-watch && vite build",
-		"preview": "vite preview",
-		"vite:dev": "vite dev",
+		"dev": "nodemon",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
@@ -26,15 +23,21 @@
 		"@sveltejs/kit": "next",
 		"@trpc/server": "^10.4.2",
 		"@types/accept-language-parser": "^1.5.3",
+		"@types/express": "^4.17.14",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"accept-language-parser": "^1.5.0",
 		"autoprefixer": "^10.4.13",
+		"concurrently": "^7.6.0",
+		"dotenv": "^16.0.3",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"express": "^4.18.2",
 		"histoire": "^0.11.7",
+		"nodemon": "^2.0.20",
 		"npm-run-all": "^4.1.5",
+		"payload": "^1.2.1",
 		"postcss-pxtorem": "^6.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
@@ -47,6 +50,7 @@
 		"svelte-preprocess": "^4.10.6",
 		"svelte-preprocess-sass-alias-import": "^1.0.0",
 		"trpc-sveltekit": "^3.0.3",
+		"ts-node": "^10.9.1",
 		"tslib": "^2.3.1",
 		"typesafe-i18n": "^5.17.1",
 		"typescript": "^4.9.3",
