fix: dyn server url

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     ports:
       - '5173:5173'
     environment:
+      - SERVER_URL=http://localhost:5173
       - PAYLOAD_SECRET=secret
       - PAYLOAD_MONGODB_URI=mongodb://mongo:27017/payload
       - VITE_TRPC=http://localhost:5173/trpc
