--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+SERVER_URL="http://localhost:5173"
 PAYLOAD_SECRET="secret"
 PAYLOAD_MONGODB_URI="mongodb://localhost:27017/payload"
 VITE_TRPC="http://localhost:5173/trpc"
