--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "nodemon",
+		"dev": "PAYLOAD_CONFIG_PATH=src/lib/server/payload/payload.config.ts concurrently \"node src/server.js\" \"typesafe-i18n\"  \"payload generate:types\"",
+		"dev:payload": "nodemon",
+		"build": "typesafe-i18n --no-watch && vite build",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"story:dev": "npm-run-all --parallel typesafe-i18n histoire:dev",
-		"story:build": "npm-run-all --parallel typesafe-i18n histoire:build",
+		"story:dev": "concurrently \"typesafe-i18n\" \"npm run histoire:dev\"",
+		"story:build": "concurrently \"typesafe-i18n\" \"npm run histoire:build\"",
 		"histoire:dev": "histoire dev",
 		"histoire:build": "histoire build",
 		"story:preview": "histoire preview",
@@ -18,7 +20,6 @@
 	"devDependencies": {
 		"@histoire/plugin-svelte": "^0.11.7",
 		"@prisma/client": "^4.7.0",
-		"@sveltejs/adapter-auto": "^1.0.0-next.89",
 		"@sveltejs/adapter-node": "^1.0.0-next.101",
 		"@sveltejs/kit": "next",
 		"@trpc/server": "^10.4.2",
@@ -36,7 +37,6 @@
 		"express": "^4.18.2",
 		"histoire": "^0.11.7",
 		"nodemon": "^2.0.20",
-		"npm-run-all": "^4.1.5",
 		"payload": "^1.2.1",
 		"postcss-pxtorem": "^6.0.0",
 		"prettier": "^2.8.0",
@@ -49,7 +49,7 @@
 		"svelte-meta-tags": "^2.6.4",
 		"svelte-preprocess": "^4.10.6",
 		"svelte-preprocess-sass-alias-import": "^1.0.0",
-		"trpc-sveltekit": "^3.0.3",
+		"trpc-sveltekit": "^3.0.8",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.3.1",
 		"typesafe-i18n": "^5.17.1",
