--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sveltekit-fullstack",
+	"name": "sveltekit-payload",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -18,49 +18,49 @@
 		"typesafe-i18n": "typesafe-i18n"
 	},
 	"devDependencies": {
-		"@histoire/plugin-svelte": "^0.11.7",
-		"@prisma/client": "^4.7.0",
-		"@sveltejs/adapter-node": "^1.0.0-next.101",
+		"@histoire/plugin-svelte": "^0.11.9",
+		"@prisma/client": "^4.7.1",
+		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
-		"@trpc/server": "^10.4.2",
+		"@trpc/server": "^10.4.3",
 		"@types/accept-language-parser": "^1.5.3",
 		"@types/express": "^4.17.14",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
+		"@typescript-eslint/eslint-plugin": "^5.45.1",
+		"@typescript-eslint/parser": "^5.45.1",
 		"accept-language-parser": "^1.5.0",
 		"autoprefixer": "^10.4.13",
 		"concurrently": "^7.6.0",
 		"dotenv": "^16.0.3",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.3.0",
+		"eslint": "^8.29.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"express": "^4.18.2",
-		"histoire": "^0.11.7",
+		"histoire": "^0.11.9",
 		"nodemon": "^2.0.20",
-		"payload": "^1.2.1",
+		"payload": "^1.2.5",
 		"postcss-pxtorem": "^6.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"prisma": "^4.7.0",
+		"prisma": "^4.7.1",
 		"sass": "^1.56.1",
 		"sharp": "^0.31.2",
 		"svelte": "^3.53.1",
-		"svelte-check": "^2.7.1",
+		"svelte-check": "^2.10.1",
 		"svelte-meta-tags": "^2.6.4",
-		"svelte-preprocess": "^4.10.6",
+		"svelte-preprocess": "^4.10.7",
 		"svelte-preprocess-sass-alias-import": "^1.0.0",
 		"trpc-sveltekit": "^3.0.8",
 		"ts-node": "^10.9.1",
-		"tslib": "^2.3.1",
+		"tslib": "^2.4.1",
 		"typesafe-i18n": "^5.17.1",
 		"typescript": "^4.9.3",
-		"vite": "^3.2.4",
+		"vite": "^3.2.5",
 		"vite-imagetools": "^4.0.11",
 		"vite-plugin-svelte-svg": "^2.0.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"@trpc/client": "^10.4.2",
+		"@trpc/client": "^10.4.3",
 		"normalize.css": "^8.0.1"
 	}
 }
