feat: use latest sveltekit release

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-SERVER_URL="http://localhost:5173"
+PUBLIC_BASE_URL="http://localhost:5173"
+PUBLIC_TRPC_SLUG="/trpc"
+
 PAYLOAD_SECRET="secret"
 PAYLOAD_MONGODB_URI="mongodb://localhost:27017/payload"
-VITE_TRPC="http://localhost:5173/trpc"
-
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
