--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-vite.config.ts.timestamp-*.mjs
 .DS_Store
 node_modules
 /build
@@ -8,3 +7,7 @@ node_modules
 .env
 .env.*
 !.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+prisma/*.db
+prisma/*.db-journal
