--- a/package.json
+++ b/package.json
@@ -1,66 +1,65 @@
 {
-	"name": "sveltekit-payload",
+	"name": "sveltekit-fullstack",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
 		"dev": "PAYLOAD_CONFIG_PATH=src/lib/server/payload/payload.config.ts concurrently \"node src/server.js\" \"typesafe-i18n\"  \"payload generate:types\"",
 		"dev:payload": "nodemon",
 		"build": "typesafe-i18n --no-watch && vite build",
+		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"story:dev": "concurrently \"typesafe-i18n\" \"npm run histoire:dev\"",
-		"story:build": "concurrently \"typesafe-i18n\" \"npm run histoire:build\"",
-		"histoire:dev": "histoire dev",
-		"histoire:build": "histoire build",
-		"story:preview": "histoire preview",
-		"typesafe-i18n": "typesafe-i18n"
+		"typesafe-i18n": "typesafe-i18n",
+		"story:dev": "concurrently \"typesafe-i18n\" \"histoire dev\"",
+		"story:build": "typesafe-i18n --no-watch && histoire build",
+		"story:preview": "histoire preview"
 	},
 	"devDependencies": {
-		"@histoire/plugin-svelte": "^0.11.9",
-		"@prisma/client": "^4.7.1",
-		"@sveltejs/adapter-node": "next",
-		"@sveltejs/kit": "next",
-		"@trpc/server": "^10.4.3",
+		"@histoire/plugin-svelte": "^0.12.2",
+		"@prisma/client": "^4.8.0",
+		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/adapter-node": "^1.0.0",
+		"@sveltejs/kit": "^1.0.1",
+		"@trpc/server": "^10.6.0",
 		"@types/accept-language-parser": "^1.5.3",
-		"@types/express": "^4.17.14",
-		"@typescript-eslint/eslint-plugin": "^5.45.1",
-		"@typescript-eslint/parser": "^5.45.1",
-		"accept-language-parser": "^1.5.0",
+		"@types/express": "^4.17.15",
+		"@typescript-eslint/eslint-plugin": "^5.47.0",
+		"@typescript-eslint/parser": "^5.47.0",
 		"autoprefixer": "^10.4.13",
 		"concurrently": "^7.6.0",
 		"dotenv": "^16.0.3",
-		"eslint": "^8.29.0",
+		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"express": "^4.18.2",
-		"histoire": "^0.11.9",
+		"histoire": "^0.12.2",
+		"imagetools-core": "^3.2.3",
 		"nodemon": "^2.0.20",
-		"payload": "^1.2.5",
 		"postcss-pxtorem": "^6.0.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"prisma": "^4.7.1",
-		"sass": "^1.56.1",
-		"sharp": "^0.31.2",
-		"svelte": "^3.53.1",
-		"svelte-check": "^2.10.1",
-		"svelte-meta-tags": "^2.6.4",
-		"svelte-preprocess": "^4.10.7",
+		"prettier": "^2.8.1",
+		"prettier-plugin-svelte": "^2.9.0",
+		"prisma": "^4.8.0",
+		"sass": "^1.57.1",
+		"svelte": "^3.55.0",
+		"svelte-check": "^2.10.3",
 		"svelte-preprocess-sass-alias-import": "^1.0.0",
-		"trpc-sveltekit": "^3.0.8",
-		"ts-node": "^10.9.1",
+		"trpc-sveltekit": "^3.2.2",
 		"tslib": "^2.4.1",
-		"typesafe-i18n": "^5.17.1",
 		"typescript": "^4.9.3",
-		"vite": "^3.2.5",
-		"vite-imagetools": "^4.0.11",
-		"vite-plugin-svelte-svg": "^2.0.2"
+		"vite": "^4.0.2",
+		"vite-imagetools": "^4.0.12",
+		"vite-plugin-svelte-svg": "^2.1.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@trpc/client": "^10.4.3",
-		"normalize.css": "^8.0.1"
+		"@trpc/client": "^10.6.0",
+		"accept-language-parser": "^1.5.0",
+		"express": "^4.18.2",
+		"normalize.css": "^8.0.1",
+		"payload": "^1.3.4",
+		"qs": "^6.11.0",
+		"svelte-meta-tags": "^2.6.4",
+		"typesafe-i18n": "^5.17.2"
 	}
 }
