--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,10 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true,
-		"noEmit": true
+		"strict": true
 	},
 	"include": [
-		"ambient.d.ts",
+		"./.svelte-kit/ambient.d.ts",
 		"./.svelte-kit/types/**/$types.d.ts",
 		"./vite.config.ts",
 		"./src/**/*.js",
@@ -24,9 +23,9 @@
 		"./tests/**/*.js",
 		"./tests/**/*.ts",
 		"./tests/**/*.svelte",
-		"./types/**/*.d.ts",
-		"./sass-alias.js"
-	]
+		"./types/**/*.d.ts"
+	],
+	"exclude": ["./node_modules/**", "./.svelte-kit/[!ambient.d.ts]**", "./src/server.js"]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
