--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"payload": "^1.5.2",
 		"qs": "^6.11.0",
 		"svelte-meta-tags": "^2.6.4",
-		"typesafe-i18n": "^5.18.1"
+		"typesafe-i18n": "^5.18.1",
+		"zod": "^3.20.2"
 	}
 }
